<resources>
    <string name="app_name">DP4coRUna</string>
    <string name="EnterDataButton">Enter Location Data</string>
    <string name="Main_Screen_Title">DP4CoRUna</string>
    <string name="InsertLocationInstructions"></string>
    <string name="street_address">Street Address</string>
    <string name="current_address">Street Address</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="country">Country</string>
    <string name="enter_room_name_instruc">Please enter additional applicable information:</string>
    <string name="building_name">Building Name</string>
    <string name="room_name">Room Name</string>
    <string name="submit">Submit</string>
    <string name="choose_safe_route">Choose Safe Route</string>
    <string name="enter_the_address_of_your_destination">Enter the address of your destination</string>
    <string name="origin_street_address">Street Address</string>
    <string name="origin_city">City</string>
    <string name="origin_zipcode">Zipcode</string>
    <string name="origin_state">State</string>
    <string name="origin_location_instruc">Origin Location:</string>
    <string name="show_safe_routes">Show Safe Routes</string>
    <string name="title_activity_maps">Map</string>
    <string name="ReportPositiveTestPrompt">Would you like to report a positive COVID-19 test? Clicking \'I am COVID-19 Positive\' will alert anyone who has been in the same locations you have been in, in the last 14 days, to get tested. Your identity will remain anonymous.</string>
    <string name="covidpositivebutton">I am COVID-19 positive</string>
    <string name="networkTransmitterWelcome">Welcome to the Transmitter!</string>
    <string name="emptyString"></string>
    <string name="welcomeTitle">DP4coRUna</string>
    <string name="welcomeMessage">Welcome!</string>
    <string name="progressMessage">Loading...</string>
    <string name="TRButton">Run</string>
    <string name="maptrain_button1">Goto</string>
    <string name="maptrain_button2">Train</string>
    <string name="cancelTag">Cancel</string>
    <string name="detect">Detect</string>
    <string name="placeholder">N/A</string>
    <string name="sampleButton">Sample</string>
</resources>
