<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:text="@string/InsertLocationInstructions"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/streetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/street_address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/zipcode"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_room_name_instruc"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/buildingname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/building_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/roomname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/room_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/submitbutton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:onClick="submitButtonPressed"
            android:text="@string/submit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>