<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <fragment
            android:id="@+id/map_train"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:context=".mapmanagement.MapTrainActivity">
    </fragment>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="64dp">
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/maptrain_lat" android:layout_weight="1"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/maptrain_lng" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/maptrain_button1" android:layout_weight="1"
                    android:text="@string/maptrain_button1" android:onClick="groundOverlayEvent"/>
            <Button
                    android:text="@string/maptrain_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/maptrain_button2" android:layout_weight="1"
                    android:onClick="setTrainingMode"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/detect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/maptrain_button3" android:layout_weight="1"
                    android:onClick="detectLocation"/>
            <Button
                    android:text="@string/sampleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/maptrain_button4" android:layout_weight="1"
                    android:onClick="sampleButtonEvent"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>