<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/scarlet_knight_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Main_Screen_Title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/enterLocationData"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="enterLocationData"
            android:text="@string/EnterDataButton" />

        <Button
            android:id="@+id/chooseSafeRoute"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="chooseSafeRoute"
            android:text="@string/choose_safe_route" />

        <Button
            android:id="@+id/TempResultsPage"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="goToTempResPage"
            android:text="TempResults" />

        <Button
            android:id="@+id/reportPositiveTestButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="reportPositiveTest"
            android:text="Report Positive COVID-19 Test" />

        <Button
            android:id="@+id/receivebutton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="receive"
            android:text="Receive" />

        <Button
            android:id="@+id/relaybutton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="relay"
            android:text="Relay" />

        <Button
            android:id="@+id/transmitbutton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="transmit"
            android:text="Transmit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>